# substrate-mina

./: .gitignore  Cargo.toml  README.md
node/: Cargo.toml
pallets/template/: Cargo.toml
runtime/: Cargo.toml
